change package to divio addon

--- a/cookie_consent/templates/cookie_consent/cookiegroup_list.html
+++ b/cookie_consent/templates/cookie_consent/cookiegroup_list.html
@@ -1,6 +1,6 @@
-{% extends "cookie_consent/base.html" %}
+{% extends "base.html" %}
 
-{% block body %}
+{% block content %}
   <h1>Cookies</h1>
 
   <p>
